deployments/pathweb/workloads/media-services/calibre/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre
  namespace: media-services
  labels:
    app.kubernetes.io/name: calibre
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre
  serviceName: calibre-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre
    spec:
      nodeSelector:
        node-group: baldric
      # SMB mounts don't support idmap for now
      hostUsers: true
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: calibre
        image: linuxserver/calibre:latest
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
          name: http-ui
        - containerPort: 8181
          name: https-ui
        - containerPort: 8081
          name: http-ccs
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: empty
          mountPath: /media
          readOnly: true
        - name: okinawa-books
          mountPath: /media/Books
        resources:
          requests:
            cpu: "10m"
            memory: "400Mi"
          limits:
            memory: "4Gi"
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: okinawa-downloads-smb
      - name: okinawa-books
        persistentVolumeClaim:
          # Calibre's sqlite DB doesn't work well over SMB.
          claimName: okinawa-media-books-nfs
      - name: empty
        emptyDir:
          medium: Memory
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
