deployments/pathweb/workloads/media-services/calibre/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-headless
  namespace: media-services
  labels:
    app.kubernetes.io/name: calibre
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: calibre
  ports:
  - port: 8080
    targetPort: http-ui
    name: http-ui
  - port: 8181
    targetPort: https-ui
    name: https-ui
  - port: 8081
    targetPort: http-ccs
    name: http-ccs
